--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,51 +1,51 @@
 {
-  "name": "lukso-geth.dnp.dappnode.eth",
-  "version": "0.1.1",
-  "upstreamVersion": "v1.13.1",
+  "name": "holesky-geth.dnp.dappnode.eth",
+  "version": "0.1.0",
+  "upstreamVersion": "v1.13.4",
   "upstreamRepo": "ethereum/go-ethereum",
   "upstreamArg": "UPSTREAM_VERSION",
-  "shortDescription": "Geth execution client for LUKSO network",
-  "description": "Geth execution client for LUKSO network",
+  "shortDescription": "Geth execution client for Holesky network",
+  "description": "Geth execution client for Holesky network",
   "type": "service",
   "chain": "ethereum",
   "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
   "categories": ["Blockchain"],
-  "keywords": ["lukso", "geth", "blockchain", "client"],
+  "keywords": ["holesky", "geth", "blockchain", "client"],
   "architectures": ["linux/amd64", "linux/arm64"],
   "links": {
-    "homepage": "https://github.com/dappnode/DAppNodePackage-lukso-geth#readme",
-    "api": "http://lukso-geth.dappnode:8545",
-    "engineAPI": "http://lukso-geth.dappnode:8551"
+    "homepage": "https://github.com/dappnode/DAppNodePackage-holesky-geth#readme",
+    "api": "http://holesky-geth.dappnode:8545",
+    "engineAPI": "http://holesky-geth.dappnode:8551"
   },
   "exposable": [
     {
-      "name": "LUKSO Geth JSON-RPC (HTTP)",
-      "description": "HTTP-JSON-RPC endpoint for LUKSO mainnet",
-      "serviceName": "lukso-geth",
+      "name": "Holesky Geth JSON-RPC (HTTP)",
+      "description": "HTTP-JSON-RPC endpoint for Holesky testnet",
+      "serviceName": "geth",
       "port": 8545
     },
     {
-      "name": "LUKSO Geth JSON-RPC (WS)",
-      "description": "WS-JSON-RPC endpoint for LUKSO mainnet",
-      "serviceName": "lukso-geth-ws",
+      "name": "Holesky Geth JSON-RPC (WS)",
+      "description": "WS-JSON-RPC endpoint for LUKSO testnet",
+      "serviceName": "geth",
       "port": 8546
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dappnode/DAppNodePackage-lukso-geth.git"
+    "url": "https://github.com/dappnode/DAppNodePackage-holesky-geth.git"
   },
   "bugs": {
-    "url": "https://github.com/dappnode/DAppNodePackage-lukso-geth/issues"
+    "url": "https://github.com/dappnode/DAppNodePackage-holesky-geth/issues"
   },
   "license": "GPL-3.0",
   "globalEnvs": [
     {
-      "envs": ["CONSENSUS_CLIENT_LUKSO"],
+      "envs": ["CONSENSUS_CLIENT_HOLESKY"],
       "services": ["geth"]
     }
   ],
   "requirements": {
-    "minimumDappnodeVersion": "0.2.77"
+    "minimumDappnodeVersion": "0.2.82"
   }
 }
