--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - GETH_METRICS=true
       - GETH_METRICS_ADDR=0.0.0.0
       - GETH_STATE_SCHEME=path
-      - EXTRA_FLAGS=""
+      - EXTRA_FLAGS
     image: "geth.holesky-geth.dnp.dappnode.eth:0.1.0"
 volumes:
   data: {}
