Fix reference to LUKSO
a reference to LUKSO was missed when this repo was forked.  would make it confusing in the HTTPS portal for those with both holesky and lukso geth, as both WS enpoints are labeled LUKSO geth WS-JSON-RPC

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -20,13 +20,13 @@
   "exposable": [
     {
       "name": "Holesky Geth JSON-RPC (HTTP)",
-      "description": "HTTP-JSON-RPC endpoint for Holesky testnet",
+      "description": "HTTP-JSON-RPC endpoint for the Holesky testnet",
       "serviceName": "geth",
       "port": 8545
     },
     {
       "name": "Holesky Geth JSON-RPC (WS)",
-      "description": "WS-JSON-RPC endpoint for LUKSO testnet",
+      "description": "WS-JSON-RPC endpoint for the Holesky testnet",
       "serviceName": "geth",
       "port": 8546
     }
