Remove global envs

--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -2,12 +2,12 @@ ARG UPSTREAM_VERSION
 
 FROM ethereum/client-go:${UPSTREAM_VERSION}
 
-COPY /security /security
+COPY /jwtsecret.hex /jwtsecret.hex
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 RUN apk update && apk add curl && \ 
     chmod +x /usr/local/bin/entrypoint.sh
 
-ENV GETH_AUTHRPC_ADDR=0.0.0.0 GETH_AUTHRPC_PORT=8551 GETH_AUTHRPC_VHOSTS=* DATADIR=/data
+ENV GETH_AUTHRPC_ADDR=0.0.0.0 GETH_AUTHRPC_PORT=8551 GETH_AUTHRPC_VHOSTS=* DATADIR=/data JWT_PATH=/jwtsecret.hex
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
