Use default geth datadir path

--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -8,6 +8,6 @@ COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN apk update && apk add curl && \ 
     chmod +x /usr/local/bin/entrypoint.sh
 
-ENV GETH_AUTHRPC_ADDR=0.0.0.0 GETH_AUTHRPC_PORT=8551 GETH_AUTHRPC_VHOSTS=* GETH_DATADIR=/data
+ENV GETH_AUTHRPC_ADDR=0.0.0.0 GETH_AUTHRPC_PORT=8551 GETH_AUTHRPC_VHOSTS=* GETH_DATADIR=/root/.ethereum
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
